--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -33,14 +33,14 @@
               <a class="sidenav-item-link" href="javascript:void(0)" data-toggle="collapse" data-target="#dashboard"
                 aria-expanded="false" aria-controls="dashboard">
                 <i class="mdi mdi-view-dashboard-outline"></i>
-                <span class="nav-text">Dashboard</span> <b class="caret"></b>
+                <span class="nav-text">Products</span> <b class="caret"></b>
               </a>
               <ul  class="collapse show"  id="dashboard"
                 data-parent="#sidebar-menu">
                 <div class="sub-menu">
                       <li  class="active" >
-                        <a class="sidenav-item-link" href="index.html">
-                          <span class="nav-text">Ecommerce</span>
+                        <a class="sidenav-item-link" href="{% url 'dashboard:product-list' %}">
+                          <span class="nav-text">List</span>
                         </a>
                       </li>
                       <li >
