--- a/dashboard/templates/dashboard/auth/password_change.html
+++ b/dashboard/templates/dashboard/auth/password_change.html
@@ -82,7 +82,9 @@
                     <button class="btn btn-secondary" type="submit">Change Password</button>
                 </div> 
                 
-              </form>
+            </form> 
+            {% comment %} {{ form.as_p }} {% endcomment %}
+             {% comment %} <button class="btn btn-secondary" type="submit">Change Password</button> {% endcomment %}
             </div>
           </div>
         </div>
