--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -52,6 +52,11 @@
                 </div>
               </ul>
             </li>
+            <li  class="has-sub active expand" >
+              <a href="{% url 'dashboard:brand-list' %}">Brands
+              </a>
+              
+            </li>
             <li  class="has-sub" >
               <a class="sidenav-item-link" href="javascript:void(0)" data-toggle="collapse" data-target="#ui-elements"
                 aria-expanded="false" aria-controls="ui-elements">
