--- a/dashboard/templates/dashboard/base/mainheader.html
+++ b/dashboard/templates/dashboard/base/mainheader.html
@@ -97,7 +97,7 @@
               </li>
               <li>
                 <a href="{% url 'dashboard:change_password' %}">
-                  <i class="fa fa-key" aria-hidden="true"></i> Change Password
+                  <i class="mdi mdi-key" aria-hidden="true"></i> Change Password
                 </a>
               </li>
               <li>
