--- a/dashboard/templates/dashboard/Category/form.html
+++ b/dashboard/templates/dashboard/Category/form.html
@@ -18,6 +18,7 @@
                                 <label for="exampleFormControlInput1">ID</label>
                                 {{form.slug}}
                             </div>
+                             <span class= 'form-error'>{{form.errors.slug}}</span>
                             <div class="row form-group">
                              
                                 <div class="col-md-12 col-sm-12">
