--- a/dashboard/templates/dashboard/base/base.html
+++ b/dashboard/templates/dashboard/base/base.html
@@ -45,6 +45,30 @@
 
 
   {% endblock %}
+     <style> 
+      .form-error{
+        color : red;
+        padding: 0;
+      }
+
+      .form-error ul li{
+        list-style:none;
+        padding: 0;
+      }
+
+      .form-inline{
+          display: flex;
+          flex-flow: row wrap;
+          align-items: center;
+      }   
+
+      .form-inline input{
+            margin: 5px 5px 5px 0;
+      } 
+
+
+  
+      </style>
   <!--
     HTML5 shim and Respond.js' %} for IE8 support of HTML5 elements and media queries
   -->
