--- a/dashboard/templates/dashboard/base/mainheader.html
+++ b/dashboard/templates/dashboard/base/mainheader.html
@@ -73,8 +73,11 @@
           <!-- User Account -->
           <li class="dropdown user-menu">
             <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-              <img src="{% static 'dashboard/assets/img/user/user.png' %}" class="user-image" alt="User Image" />
-              <span class="d-none d-lg-inline-block">Abdus Salam</span>
+              <img src="{{request.user.account.image.url}}" class="user-image" alt="User Image" />
+              <span class="d-none d-lg-inline-block">{% if request.user.is_authenticated%}
+                                                      {{request.user.username}}
+                                                      {%endif%}
+              </span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
               <!-- User image -->
