--- a/dashboard/templates/dashboard/Category/list.html
+++ b/dashboard/templates/dashboard/Category/list.html
@@ -6,6 +6,7 @@
     <div class="content-wrapper">
       <div class="content">
         <div class="breadcrumb-wrapper">
+          <a href="{% url 'dashboard:product-create' %}" style="float: right;" type="button" class="mb-1 btn btn-outline-success">Add Product</a>
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb p-0">
               <li class="breadcrumb-item">
@@ -17,6 +18,7 @@
               <li class="breadcrumb-item" aria-current="page">table</li>
             </ol>
           </nav>
+        
         </div>
         
 
