--- a/dashboard/templates/dashboard/base/mainheader.html
+++ b/dashboard/templates/dashboard/base/mainheader.html
@@ -114,7 +114,7 @@
               </li>
   
               <li class="dropdown-footer">
-                <a href="{% url 'dashboard:admin_logout' %}"> <i class="mdi mdi-logout"></i> Log Out </a>
+                <a href="{% url 'dashboard:logout' %}"> <i class="mdi mdi-logout"></i> Log Out </a>
               </li>
             </ul>
           </li>
