--- a/dashboard/templates/dashboard/base/base.html
+++ b/dashboard/templates/dashboard/base/base.html
@@ -127,6 +127,12 @@
 <script src="{% static 'dashboard/assets/js/date-range.js' %}"></script>
 <script src="{% static 'dashboard/assets/js/map.js' %}"></script>
 <script src="{% static 'dashboard/assets/js/custom.js' %}"></script>
+<script>
+  $(".select2").select2({ 
+        width: '100%',
+    });
+
+</script>
 
 {% block script %} {% endblock %}
 
