--- a/dashboard/templates/dashboard/auth/login.html
+++ b/dashboard/templates/dashboard/auth/login.html
@@ -29,6 +29,17 @@
 
   <!-- FAVICON -->
   <link href="{% static 'dashboard/assets/img/favicon.png' %}" rel="shortcut icon" />
+  <style>
+    .form-error{
+        color : red;
+        padding: 0;
+      }
+
+    .form-error ul li{
+      list-style:none;
+      padding: 0;
+    }
+  </style>
 
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
@@ -68,7 +79,8 @@
                 {% csrf_token %}
                  <div class="row">
                   <div class="form-group col-md-12 mb-4"> 
-                    {{ form.username }} {{ form.errors.username }}
+                    {{ form.username }} 
+                    <span class="form-error">{{ form.errors.username }}</span>
                   </div>
                   <div class="form-group col-md-12 ">
                       {{form.password}}
@@ -82,7 +94,7 @@
                         </label>
                 
                       </div>
-                      <p><a class="text-blue" href="{% url 'dashboard:recoverpassword' %}">Forgot Your Password?</a></p>
+                      <p><a class="text-blue" href="{% url 'dashboard:recover-password' %}">Forgot Your Password?</a></p>
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary btn-block mb-4">Login</button>
                     <p>Don't have an account yet ?
