--- a/dashboard/templates/dashboard/users/userlist.html
+++ b/dashboard/templates/dashboard/users/userlist.html
@@ -12,7 +12,7 @@
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-left">
               <li class="breadcrumb-item">
-                <a href="{% url 'dashboard:admin-dashboard' %}">Home</a>
+                <a href="{% url 'dashboard:dashboard' %}">Home</a>
               </li>
               <li class="breadcrumb-item active">Users</li>
             </ol>
