--- a/dashboard/templates/dashboard/Category/form.html
+++ b/dashboard/templates/dashboard/Category/form.html
@@ -25,6 +25,10 @@
                                     <label for="exampleFormControlInput1">Category Name</label>
                                 {{form.name}}
                                 </div>
+                                <div class="col-md-12 col-sm-12">
+                                    <label for="exampleFormControlInput1">Sub Category</label>
+                                {{form.parent}}
+                                </div>
                                 {% comment %} <div class="col-md-6 col-sm-12">
                                     <label for="exampleFormControlPassword">Description</label>
                                     {{form.description}}
