--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -101,7 +101,7 @@
                           data-parent="#sidebar-menu">
                           <div class="sub-menu">
                                 <li  class="active" >
-                                  <a class="sidenav-item-link" href="{% url 'dashboard:user_list' %}">
+                                  <a class="sidenav-item-link" href="{% url 'dashboard:user-list' %}">
                                     <span class="nav-text">Users</span>
                                   </a>
                                 </li>
