--- a/dashboard/templates/dashboard/users/usercreate.html
+++ b/dashboard/templates/dashboard/users/usercreate.html
@@ -26,7 +26,7 @@
           </div>
           <div class="col-sm-6">
             <button class="btn btn-primary float-sm-right">
-              <a class="text-white" href="{% url 'dashboard:user_list' %}"
+              <a class="text-white" href="{% url 'dashboard:user-list' %}"
                 >Cancel</a
               >
             </button>
