--- a/dashboard/templates/dashboard/users/usercreate.html
+++ b/dashboard/templates/dashboard/users/usercreate.html
@@ -19,7 +19,7 @@
         <div class="col-sm-6">
             <ol class="breadcrumb float-sm-left">
               <li class="breadcrumb-item">
-                <a href="{% url 'dashboard:admin-dashboard' %}">Home</a>
+                <a href="{% url 'dashboard:dashboard' %}">Home</a>
               </li>
               <li class="breadcrumb-item active">User</li>
             </ol>
