--- a/dashboard/templates/dashboard/auth/login.html
+++ b/dashboard/templates/dashboard/auth/login.html
@@ -68,10 +68,10 @@
                 {% csrf_token %}
                  <div class="row">
                   <div class="form-group col-md-12 mb-4"> 
-                    {{ form.username }} {{ form.errors.username }}
+                    {{ form.username }} <span>{{ form.errors.username }}</span>
                   </div>
                   <div class="form-group col-md-12 ">
-                      {{form.password}}
+                      {{form.password}}  <span>{{ form.errors.password }}</span>
                   </div>
                   <div class="col-md-12">
                     <div class="d-flex my-2 justify-content-between">
@@ -82,7 +82,7 @@
                         </label>
                 
                       </div>
-                      <p><a class="text-blue" href="{% url 'dashboard:recoverpassword' %}">Forgot Your Password?</a></p>
+                      <p><a class="text-blue" href="{% url 'dashboard:recover-password' %}">Forgot Your Password?</a></p>
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary btn-block mb-4">Login</button>
                     <p>Don't have an account yet ?
