--- a/dashboard/templates/dashboard/users/userlist.html
+++ b/dashboard/templates/dashboard/users/userlist.html
@@ -12,7 +12,7 @@
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-left">
               <li class="breadcrumb-item">
-                <a href="{% url 'dashboard:admin-dashboard' %}">Home</a>
+                <a href="{% url 'dashboard:dashboard' %}">Home</a>
               </li>
               <li class="breadcrumb-item active">Users</li>
             </ol>
@@ -75,7 +75,7 @@
                       </td>
                       <td>
                       <span>
-                      <a href="{% url 'dashboard:recoverpassword' %}" class="btn btn-info mr-2 reset">Reset Password</a>
+                      <a href="{% url 'dashboard:recover-password' %}" class="btn btn-info mr-2 reset">Reset Password</a>
                       </span>
                       {% if user.is_active %}
                       <a href="{% url 'dashboard:user_disable' user.pk %}" class="toggle-inactive"><button class="btn btn-danger"><span class="mdi mdi-block-helper"></span></button></a>
